[gd_scene load_steps=7 format=2]

[ext_resource path="res://World/HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://World/HUD/PanelStyleConfig.tres" type="Theme" id=2]
[ext_resource path="res://World/HUD/LabelPuntosTheme.tres" type="Theme" id=3]
[ext_resource path="res://World/HUD/LavelVidasTheme.tres" type="Theme" id=4]
[ext_resource path="res://World/HUD/StileBozStyle.tres" type="Theme" id=5]
[ext_resource path="res://World/HUD/WinPannel.tscn" type="PackedScene" id=6]

[node name="HUD" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
light_mask = 0
margin_right = 324.0
margin_bottom = 20.0
theme = ExtResource( 2 )

[node name="Timer" type="Timer" parent="Panel"]

[node name="LabelTiempo" type="Label" parent="Panel"]
margin_left = 105.0
margin_top = 3.0
margin_right = 145.0
margin_bottom = 17.0

[node name="LabelPuntos" type="Label" parent="Panel"]
margin_left = 9.0
margin_top = 3.0
margin_right = 49.0
margin_bottom = 17.0
theme = ExtResource( 3 )
align = 1
valign = 1

[node name="LabelVidas" type="Label" parent="Panel"]
margin_left = 188.0
margin_top = 3.0
margin_right = 230.0
margin_bottom = 17.0
theme = ExtResource( 4 )

[node name="ButtonReset" type="Button" parent="Panel"]
margin_left = 255.0
margin_right = 320.0
margin_bottom = 20.0
text = "Reset"

[node name="WinPannel" parent="." instance=ExtResource( 6 )]

[connection signal="timeout" from="Panel/Timer" to="." method="_on_Timer_timeout"]
[connection signal="pressed" from="Panel/ButtonReset" to="." method="_on_ButtonReset_pressed"]
[connection signal="draw" from="WinPannel" to="." method="_on_WinPannel_draw"]
